--- a/paper/article.tex
+++ b/paper/article.tex
@@ -203,7 +203,7 @@ placed in the range $1<c<10$. Each one of the halos is generated with
 four different total particle numbers: $20$, $200$, $2000$ and $20000$.
 
 The method we use to generate the halos is based on the integrated
-mass profile. Given the number of particles $n$ and the concentration $c$ we define the mass element as $\delta m = 1/n$ (this corresponds to the mass of each particle, such that the total mass is one). Then for each number $k$ from $1$ to $n$ we find the value of $r$ such that
+mass profile. Given the number of particles $n$ and the concentration $c$ we define the mass element as $\delta m = 1/n$ (this corresponds to the mass of each particle such that the total mass is one). Then for each number $k$ from $1$ to $n$ we find the value of $r$ such that
 \begin{equation}
 m(<r;c)-k \cdot \delta m 
 \end{equation}
