--- a/paper/article.tex
+++ b/paper/article.tex
@@ -148,9 +148,12 @@ determine the density profile of the halo. In Figure
 profiles for different values of the concentration in the range
 $1\leq c \leq 20$. 
 
-
 \begin{figure}
-\caption{FIXME: Mass profile of a halo}
+\begin{center}
+  \includegraphics[width=0.48\textwidth]{nfw_normalized.pdf}
+\end{center}
+\caption{Mass profiles of several haloes with different concentrations
+    \label{fig:profiles}}
 \end{figure}
 
 
@@ -270,7 +273,7 @@ virial radius, virial mass and concentration.
 In Figure \ref{fig:results_mocks} we show the integrated distribution
 percentual difference between the concentration measured with our
 fitting method $c_{out}$ in comparison with the concentration used to
-generate the mock halos, $c_{in}$, $D=(c_{in}-c_{out})/c_{in}$. 
+generate the mock halos, $c_{in}$, $D=(c_{in}-c_{out})/c_{in}$. Then we can see that as the number of particles increases, the curve becomes more pronounced at 0. Showing that for most of the halos $c_{in}$ is very similar to $c_{out}$.
 
 
 \subsection{Simulation Data}
@@ -280,15 +283,16 @@ generate the mock halos, $c_{in}$, $D=(c_{in}-c_{out})/c_{in}$.
 \label{sec:discussion}
 
 \subsection{Comparison against other methods}
-
+FIXME: Ask to Jaime, Differences with BDM
 \subsection{Concentration as a function of halo mass}
-
+FIXME: Add plots and interpretation, Matches with BDM
 \subsection{Implication for comparisons against observations}
+FIXME: Ask to Jaime
 
 
 \section{Conclusions}
 \label{sec:conclusions}
-
+FIXME: Ask to Jaime
 
 \bibliographystyle{mn2e}
 \bibliography{references}
