--- a/paper/article.tex
+++ b/paper/article.tex
@@ -284,6 +284,7 @@ generate the mock halos, $c_{in}$, $D=(c_{in}-c_{out})/c_{in}$. Then we can see 
 
 \subsection{Comparison against other methods}
 FIXME: Ask to Jaime, Differences with BDM
+Works with any n points
 \subsection{Concentration as a function of halo mass}
 FIXME: Add plots and interpretation, Matches with BDM
 \subsection{Implication for comparisons against observations}
