--- a/paper/article.tex
+++ b/paper/article.tex
@@ -283,10 +283,19 @@ generate the mock halos, $c_{in}$, $D=(c_{in}-c_{out})/c_{in}$. Then we can see 
 \label{sec:discussion}
 
 \subsection{Comparison against other methods}
-FIXME: Ask to Jaime, Differences with BDM
-Works with any n points
+We compared this method against two methods: The first one consists in using shells for estimating the density in function of the radius and using the same MCMC method for fitting and the second one consists in using the circular velocity $V(r)=\sqrt{GM(<r)/r}$ and the relation for the NFW profile
+\begin{equation}
+\frac{V_{max}}{V(r_{vir})} = \sqrt{\frac{0.216c}{M(r_{vir})}}
+\end{equation}
+Where $V_{max}$ is the maximum velocity, to find the value of the concentration. We obtained the following results
+
+Fixme: RESULTS!
 \subsection{Concentration as a function of halo mass}
-FIXME: Add plots and interpretation, Matches with BDM
+Aditionally we compared those three methods plotting the concentration as a function of halo mass 
+
+Fixme: Plot!
+
+The bold lines in Figure ?? corresponds to the median and the thinner lines corresponds to the quartiles.
 \subsection{Implication for comparisons against observations}
 FIXME: Ask to Jaime
 
