--- a/paper/article.tex
+++ b/paper/article.tex
@@ -163,7 +163,7 @@ $1\leq c \leq 20$.
 \subsection{Circular velocity}
 
 It is also customary to express the mass of the halo inte terms of the
-circular velocity $V_{c}=sqrt{GM(<r)/r}$. From this we can
+circular velocity $V_{c}=\sqrt{GM(<r)/r}$. From this we can
 define a new dimensionless circular velocity $v(<x)\equiv
 V_{c}(<r)/V_{c}(<r_v)$, using the result in Equation \ref{eq:profile}
 to have:
