--- a/paper/article.tex
+++ b/paper/article.tex
@@ -307,9 +307,9 @@ Where $V_{max}$ is the maximum velocity, to find the value of the concentration.
 
 \begin{figure}
 \begin{center}
-  \includegraphics[width=0.48\textwidth]{density-mass.pdf}
+  \includegraphics[width=0.48\textwidth]{mass-density.pdf}
 \end{center}
-\caption{Concentration obtained from the mass method against the one obtained in the density method
+\caption{Concentration obtained from the density method against the one obtained in the mass method
     \label{fig:density-mass}}
 \end{figure}
 \begin{figure}
