--- a/paper/article.tex
+++ b/paper/article.tex
@@ -1,4 +1,5 @@
 \documentclass[useAMS,usenatbib]{mn2e}
+\usepackage{float}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphics}
@@ -141,8 +142,6 @@ A=\left[\ln\left(1+c\right)-\left(\frac{c}{c+1}\right)\right],
 \end{equation}
 %
 and the parameter $c$ is known as the concentration $c\equiv r_v/r_s$.
-
-
 
 The most interesting feature of Eq. (\ref{eq:profile}) is that the
 concentration is the only free parameter to describe the shape of the
@@ -321,42 +320,27 @@ Where ${\cal{H}}_n$ corresponds to the set of haloes with $n$ particles, $c_{org
 
 In Figure \ref{fig:error} we plotted $\xi$ for the three methods. We consider that $\xi$ is a good estimate because it is standardized, giving equal weight to all errors regardless of the magnitude of the concentrations or the number of halos. On the other hand we have that $\xi$ decreases quite fast with the number of particles for our method and is more precise in any case that the other methods.
 
+\begin{figure*}
+\begin{center}
+  \includegraphics[width=0.99\textwidth]{mass-density-velocity.pdf}
+\end{center}
+\caption{Comparison between the obtained concentrations by the three methods
+    \label{fig:mdv}}
+\end{figure*}
 
-We also used these three methods to obtain the concentration for each halo in miniMDR1 and compared the results. As can be seen in the Figures \ref{fig:density-mass}, \ref{fig:density-velocity} and \ref{fig:velocity-mass} the three methods show mutually consistent results. However it can be inferred that the concentration values ​​obtained by the method of circular velocity are higher than those obtained by our method, and also the values ​​obtained by the density method are generally below the results of our method.
-
-\begin{figure}
-\begin{center}
-  \includegraphics[width=0.48\textwidth]{mass-density.pdf}
-\end{center}
-\caption{Concentration obtained from the density method against the one obtained in the mass method
-    \label{fig:density-mass}}
-\end{figure}
-\begin{figure}
-\begin{center}
-  \includegraphics[width=0.48\textwidth]{density-velocity.pdf}
-\end{center}
-\caption{Concentration obtained from the velocity method against the one obtained in the density method
-    \label{fig:density-velocity}}
-\end{figure}
-\begin{figure}
-\begin{center}
-  \includegraphics[width=0.48\textwidth]{velocity-mass.pdf}
-\end{center}
-\caption{Concentration obtained from the mass method against the one obtained in the velocity method
-    \label{fig:velocity-mass}}
-\end{figure}
+We also used these three methods to obtain the concentration for each halo in miniMDR1 and compared the results. As can be seen in Figure \ref{fig:mdv} the three methods show mutually consistent results. However it can be inferred that the concentration values ​​obtained by the method of circular velocity are higher than those obtained by our method, and also the values ​​obtained by the density method are generally below the results of our method.
 
 \subsection{Concentration as a function of halo mass}
 Aditionally we compared those three methods plotting the concentration as a function of the number of particles of each halo 
-
-\begin{figure}
-\begin{center}
-  \includegraphics[width=0.48\textwidth]{concentration.pdf}
-\end{center}
-\caption{Concentration against number of particles
-    \label{fig:concentrations}}
-\end{figure}
-
+%
+%\begin{figure}[h!]
+%\begin{center}
+%  \includegraphics[width=0.48\textwidth]{concentration.pdf}
+%\end{center}
+%\caption{Concentration against number of particles
+%    \label{fig:concentrations}}
+%\end{figure}
+%
 The bold lines in Figure \ref{fig:concentrations} corresponds to the median and the thinner lines corresponds to the quartiles. Showing that our method has values ​​ranging from those obtained from the other two methods.
 \subsection{Implication for comparisons against observations}
 FIXME: Ask to Jaime
