--- a/paper/article.tex
+++ b/paper/article.tex
@@ -332,15 +332,15 @@ We also used these three methods to obtain the concentration for each halo in mi
 
 \subsection{Concentration as a function of halo mass}
 Aditionally we compared those three methods plotting the concentration as a function of the number of particles of each halo 
-%
-%\begin{figure}[h!]
-%\begin{center}
-%  \includegraphics[width=0.48\textwidth]{concentration.pdf}
-%\end{center}
-%\caption{Concentration against number of particles
-%    \label{fig:concentrations}}
-%\end{figure}
-%
+
+\begin{figure}[h!]
+\begin{center}
+  \includegraphics[width=0.48\textwidth]{concentration.pdf}
+\end{center}
+\caption{Concentration against number of particles
+    \label{fig:concentrations}}
+\end{figure}
+
 The bold lines in Figure \ref{fig:concentrations} corresponds to the median and the thinner lines corresponds to the quartiles. Showing that our method has values ​​ranging from those obtained from the other two methods.
 \subsection{Implication for comparisons against observations}
 FIXME: Ask to Jaime
