--- a/paper/article.tex
+++ b/paper/article.tex
@@ -318,7 +318,7 @@ Where ${\cal{H}}_n$ corresponds to the set of haloes with $n$ particles, $c_{org
     \label{fig:error}}
 \end{figure}
 
-In Figure \ref{fig:error} we plotted $\xi$ for the three methods. We consider that $\xi$ is a good estimate because it is standardized, giving equal weight to all errors regardless of the magnitude of the concentrations or the number of halos. On the other hand we have that $\xi$ decreases quite fast with the number of particles for our method and is more precise in any case that the other methods.
+In Figure \ref{fig:error} we plotted $\xi$ for the three methods. We consider that $\xi$ is a good estimate because it is standardized, giving equal weight to all errors regardless of the magnitude of the concentrations or the number of halos. On the other hand we have that $\xi$ decreases quite fast with the number of particles for our method and is more precise in any case that the other methods. As mentioned in FIXME "for a large fraction of halos, and for the most massive in particular, the NFW functional does not Represent a good fit to the density profile." This fact could explain why $\xi$ increases with the number of particles for the density method.
 
 \begin{figure*}
 \begin{center}
@@ -341,10 +341,9 @@ Aditionally we compared those three methods plotting the concentration as a func
     \label{fig:concentrations}}
 \end{figure}
 
-The bold lines in Figure \ref{fig:concentrations} corresponds to the median and the thinner lines corresponds to the quartiles. Showing that our method has values ​​ranging from those obtained from the other two methods.
+The bold lines in Figure \ref{fig:concentrations} corresponds to the median and the thinner lines corresponds to the quartiles. Showing that our method has values ​​ranging from those obtained from the other two methods.Also we can see that the concentration obtained by the velocity method is higher than that obtained by the density method, this fact is consistent with FIXME.
 \subsection{Implication for comparisons against observations}
 FIXME: Ask to Jaime
-
 
 \section{Conclusions}
 \label{sec:conclusions}
