--- a/paper/article.tex
+++ b/paper/article.tex
@@ -330,6 +330,8 @@ In Figure \ref{fig:error} we plotted $\xi$ for the three methods. We consider th
 
 We also used these three methods to obtain the concentration for each halo in miniMDR1 and compared the results. As can be seen in Figure \ref{fig:mdv} the three methods show mutually consistent results. However it can be inferred that the concentration values ​​obtained by the method of circular velocity are higher than those obtained by our method, and also the values ​​obtained by the density method are generally below the results of our method.
 
+Running another test with halos whose concentrations vary as a normal distribution of variance ${\sigma}^2$ we found that the concentrations obtained by the method of circular velocity are a 35\% greater than the ones obtained by the density method. However the concentrations obtained by the velocity method are barey higher (around 2\% or 3\%) than the ones obtained by our method. We did not find any significant variation in the concentration values obtained by any method by changing ${\sigma}^2$ in contrast with FIXME.
+
 \subsection{Concentration as a function of halo mass}
 Aditionally we compared those three methods plotting the concentration as a function of the number of particles of each halo 
 
