--- a/paper/article.tex
+++ b/paper/article.tex
@@ -314,7 +314,7 @@ Where ${\cal{H}}_n$ corresponds to the set of haloes with $n$ particles, $c_{org
 \begin{center}
   \includegraphics[width=0.48\textwidth]{error.pdf}
 \end{center}
-\caption{Relative error Against number of Particles
+\caption{Relative error against number of Particles
     \label{fig:error}}
 \end{figure}
 
@@ -335,7 +335,7 @@ Running another test with halos whose concentrations vary as a normal distributi
 \subsection{Concentration as a function of halo mass}
 Aditionally we compared those three methods plotting the concentration as a function of the number of particles of each halo 
 
-\begin{figure}[h!]
+\begin{figure}
 \begin{center}
   \includegraphics[width=0.48\textwidth]{concentration.pdf}
 \end{center}
