Massive changes part II

--- a/paper/article.tex
+++ b/paper/article.tex
@@ -314,7 +314,7 @@ Where ${\cal{H}}_n$ corresponds to the set of haloes with $n$ particles, $c_{org
 \begin{center}
   \includegraphics[width=0.48\textwidth]{error.pdf}
 \end{center}
-\caption{Relative error against number of Particles
+\caption{Relative error against number of particles
     \label{fig:error}}
 \end{figure}
 
