added new plots

--- a/paper/article.tex
+++ b/paper/article.tex
@@ -190,7 +190,6 @@ $1\leq c \leq 20$.
     \label{fig:profiles}}
 \end{figure}
 
-
 \subsection{Circular velocity}
 
 It is also customary to express the mass of the halo inte terms of the
@@ -203,8 +202,16 @@ to have:
 v(<x)=\sqrt{\frac{1}{A}\left[\frac{\ln\left(1+xc\right)}{x}-\frac{c}{xc+1}\right]},
 \end{equation}
 
+\begin{figure}
+\begin{center}
+  \includegraphics[width=0.48\textwidth]{vel_normalized.pdf}
+\end{center}
+\caption{Dimensionless velocity profiles as a function of the
+  dimensionless radius for different concentration values.
+    \label{fig:velocity}}
+\end{figure}
 
-In Figure XXX we show the circular velocity profile for the same
+In Figure \ref{fig:velocity} we show the circular velocity profile for the same
 concentrations as in Figure \ref{fig:profiles}.
 
 \section{A new Approach to Halo Fitting}
@@ -249,8 +256,8 @@ find the optimum value of $c$ and its  associated uncertainty
 $\sigma_c$.  
 
 
-{\bf Cuantos pasos usa la cadena? De cuanto es el sigma en
-los saltos de c en lca cadena?
+{\bf Cuantos pasos usa la cadena? (50000) De cuanto es el sigma en
+los saltos de c en lca cadena? (0.029)
 
 Falta alguna figura que muestre resultados de la -log likelihood para
 algunos casos representativos.
